Harmony: All buttons are uniform and have correct spacing

--- a/src/main/resources/CodeBash/CodeBashLight.css
+++ b/src/main/resources/CodeBash/CodeBashLight.css
@@ -44,6 +44,10 @@
     -fx-font-size: 1em; /* 12 */
 }
 
+#setting:hover {
+    -fx-text-fill: #107896;
+}
+
 #setting:selected  {
     -fx-text-fill: #107896;
     -fx-background-color: transparent;
@@ -61,7 +65,6 @@
     -fx-text-fill: #107896;
     -fx-font-family: "Roboto Mono", sans-serif;
     -fx-font-size: 18;
-    -fx-padding: 15;
     -fx-font-weight: bold;
 }
 
@@ -80,7 +83,7 @@
     -fx-font-family: "Roboto Mono", sans-serif;
 }
 
-.button{
+.toggle-button{
     -fx-transition-duration: 0.4s;
     -fx-border-color: transparent;
     -fx-border-width: 1, 1;
@@ -89,20 +92,23 @@
     -fx-background-color: transparent;
     -fx-font-family:"Roboto Mono", sans-serif;
     -fx-font-size: 1em; /* 12 */
-    -fx-text-fill: #107896;
+    -fx-text-fill: #646669;
 }
 
-.button:hover {
+.toggle-button:hover {
     -fx-border-radius: 8px;
     -fx-border-color: transparent;
-    -fx-text-fill: #107896;
-    -fx-background-color: linear-gradient(#f2f2f2, #d6d6d6), linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%), linear-gradient(#dddddd 0%, #f6f6f6 50%);;
+    -fx-background-color: transparent;
     -fx-background-radius: 8px;
     -fx-border-width: 1, 1;
     -fx-border-insets: 1 1 1 1, 0;
+    -fx-text-fill: #107896;
 }
 
-.button:pressed {
+.toggle-button:selected  {
+    -fx-text-fill: #107896;
     -fx-background-color: transparent;
-    -fx-text-fill: #323437;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-size: 1em; /* 12 */
+
 }
