--- a/src/main/resources/CodeBash/WelcomeDark.css
+++ b/src/main/resources/CodeBash/WelcomeDark.css
@@ -19,6 +19,10 @@
     -fx-font-size: 1em; /* 12 */
 }
 
+#setting:hover {
+    -fx-text-fill: Orange;
+}
+
 #setting:selected  {
     -fx-text-fill: Orange;
     -fx-background-color: transparent;
@@ -53,7 +57,7 @@
     -fx-font-family: "Roboto Mono", sans-serif;
 
 }
-.button{
+.toggle-button{
     -fx-transition-duration: 0.4s;
     -fx-border-color: transparent;
     -fx-border-width: 1, 1;
@@ -65,18 +69,20 @@
     -fx-text-fill: #646669;
 }
 
-.button:hover {
+.toggle-button:hover {
     -fx-border-radius: 8px;
     -fx-border-color: transparent;
-    -fx-text-fill: blue;
-    -fx-background-color: linear-gradient(#f2f2f2, #d6d6d6), linear-gradient(#fcfcfc 0%, #d9d9d9 20%, #d6d6d6 100%), linear-gradient(#dddddd 0%, #f6f6f6 50%);;
+    -fx-text-fill: orange;
+    -fx-background-color: transparent;
     -fx-background-radius: 8px;
     -fx-border-width: 1, 1;
     -fx-border-insets: 1 1 1 1, 0;
 }
 
-.button:pressed {
-    -fx-background-color: linear-gradient(#f8f8ff, #f8f8ff), linear-gradient(#fcfcfc 0%, #f8f8ff 20%, #f8f8ff 100%), linear-gradient(#afeeee 0%, #87ceeb 70%);;
-    -fx-text-fill: blue;
-}
+.toggle-button:selected  {
+    -fx-text-fill: orange;
+    -fx-background-color: transparent;
+    -fx-font-family: "Roboto Mono", sans-serif;
+    -fx-font-size: 1em; /* 12 */
 
+}
